refactor: :recycle: Use makesweet-py as generator
